cmake_minimum_required(VERSION 3.5)
project(proj1)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c99 -Wall -Werror -Wextra -pedantic -pthread ")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=g++ -Wall -Werror -Wextra -pedantic")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic")
#set(SOURCE_FILES ftrest.c ftrestd.c)
#add_executable(proj1 ${SOURCE_FILES})
add_executable(proj1.server ftrestd.cpp)
add_executable(proj1.clent ftrest.cpp HttpHeader.h Parser.h Commander.h)
